--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -52,7 +52,7 @@ jobs:
         with:
           node-version: "16"
           cache: ${{ steps.detect-package-manager.outputs.manager }}
-          cache-dependency-path: "./package-lock.json"
+          cache-dependency-path: "./yarn.lock"
       - name: Setup Pages
         uses: actions/configure-pages@v2
         with:
