--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@reduxjs/toolkit": "^1.9.1",
     "classnames": "^2.3.2",
     "framer-motion": "^7.2.0",
+    "googleapis": "^110.0.0",
     "k6": "^0.0.0",
     "next": "latest",
+    "next-pwa": "^5.6.0",
     "nprogress": "^0.2.0",
     "openai": "^3.1.0",
     "react": "18.1.0",
