--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "clean": "rimraf \"{node_modules,.next,.next-dev,out,.cache,.idea}\"",
+    "format": "prettier --write .",
+    "lint": "next lint",
+    "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
-    "start": "next start"
+    "postbuild": "cross-env next-sitemap --config next-sitemap.config.js",
+    "start": "next start",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@emotion/react": "^11.10.0",
@@ -12,13 +17,16 @@
     "@mui/material": "^5.10.1",
     "@reduxjs/toolkit": "^1.9.1",
     "classnames": "^2.3.2",
+    "cross-env": "^7.0.3",
     "framer-motion": "^7.2.0",
     "googleapis": "^110.0.0",
+    "husky": "^8.0.3",
     "k6": "^0.0.0",
     "next": "latest",
     "next-pwa": "^5.6.0",
     "nprogress": "^0.2.0",
     "openai": "^3.1.0",
+    "prettier": "^2.8.8",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
